// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderImageWidth renders 0 1`] = `
Array [
  .c0 {
  border-image-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-width: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-width: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageWidth renders function 1`] = `
Array [
  .c0 {
  border-image-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-width: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-width: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-width: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageWidth renders invalid theme path 1`] = `
Array [
  .c0 {
  border-image-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-width: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-width: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageWidth renders negative number 1`] = `
Array [
  .c0 {
  border-image-width: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-width: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-width: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-width: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageWidth renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-image-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-image-width: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-width: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-width: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image-width: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-image-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image-width: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-image-width: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-width: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-image-width: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-image-width: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageWidth renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    border-image-width: July;
  }
}

@media April {
  .c0 {
    border-image-width: August;
  }
}

@media January {
  .c0 {
    border-image-width: September;
  }
}

@media April {
  .c0 {
    border-image-width: November;
  }
}

@media June {
  .c0 {
    border-image-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-image-width: July;
  }
}

@media April {
  .c0 {
    border-image-width: August;
  }
}

@media January {
  .c0 {
    border-image-width: September;
  }
}

@media April {
  .c0 {
    border-image-width: November;
  }
}

@media June {
  .c0 {
    border-image-width: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-image-width: January;
  }
}

@media April {
  .c0 {
    border-image-width: December;
  }
}

@media January {
  .c0 {
    border-image-width: April;
  }
}

@media April {
  .c0 {
    border-image-width: May;
  }
}

@media June {
  .c0 {
    border-image-width: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-image-width: January;
  }
}

@media April {
  .c0 {
    border-image-width: December;
  }
}

@media January {
  .c0 {
    border-image-width: April;
  }
}

@media April {
  .c0 {
    border-image-width: May;
  }
}

@media June {
  .c0 {
    border-image-width: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageWidth renders postitive number 1`] = `
Array [
  .c0 {
  border-image-width: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-width: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-width: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-width: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageWidth renders string 1`] = `
Array [
  .c0 {
  border-image-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-width: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-width: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-width: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderImageWidth renders valid theme path 1`] = `
Array [
  .c0 {
  border-image-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-image-width: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
